# cpp-palp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  poly.cpp
docs/: CMakeLists.txt  mainpage.md
include/cpp-palp/: nef.hpp  rat.hpp
src/: CMakeLists.txt  rat.cpp
tests/: CMakeLists.txt  testlib.cpp
